--- a/FellowBloggerV2/Storyboards/Base.lproj/Main.storyboard
+++ b/FellowBloggerV2/Storyboards/Base.lproj/Main.storyboard
@@ -82,6 +82,82 @@
             </objects>
             <point key="canvasLocation" x="1606" y="49"/>
         </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="C9g-nf-AWL">
+            <objects>
+                <viewController storyboardIdentifier="DetailVC" id="y6v-SD-4ZL" customClass="DetailViewController" customModule="FellowBloggerV2" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GOx-03-U0e">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ProfilePH" translatesAutoresizingMaskIntoConstraints="NO" id="wFu-3J-Osi" customClass="CircularImageView" customModule="FellowBloggerV2" customModuleProvider="target">
+                                <rect key="frame" x="8" y="72" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="21g-XE-U3o"/>
+                                    <constraint firstAttribute="width" secondItem="wFu-3J-Osi" secondAttribute="height" multiplier="1:1" id="SUy-PG-AdJ"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CjT-Ib-XYf">
+                                <rect key="frame" x="118" y="111.5" width="148" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yKe-bd-Gih">
+                                <rect key="frame" x="306" y="87.5" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="FXs-ml-W76"/>
+                                    <constraint firstAttribute="width" constant="60" id="rTu-Iz-nhB"/>
+                                </constraints>
+                                <state key="normal" image="settings"/>
+                                <connections>
+                                    <action selector="settingsPressed:" destination="y6v-SD-4ZL" eventType="touchUpInside" id="ZUp-NO-v8s"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wsn-oY-UoQ">
+                                <rect key="frame" x="0.0" y="228" width="375" height="211"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="wsn-oY-UoQ" secondAttribute="height" multiplier="16:9" id="xea-2e-rwp"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="description" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ebH-dT-fgZ">
+                                <rect key="frame" x="0.0" y="439" width="375" height="228"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="wFu-3J-Osi" firstAttribute="leading" secondItem="fc8-VB-nVc" secondAttribute="leading" constant="8" id="4LH-Jh-O1X"/>
+                            <constraint firstItem="wsn-oY-UoQ" firstAttribute="centerX" secondItem="GOx-03-U0e" secondAttribute="centerX" id="5nE-W1-c2F"/>
+                            <constraint firstItem="wFu-3J-Osi" firstAttribute="top" secondItem="fc8-VB-nVc" secondAttribute="top" constant="8" id="7eW-qU-fCe"/>
+                            <constraint firstItem="fc8-VB-nVc" firstAttribute="trailing" secondItem="yKe-bd-Gih" secondAttribute="trailing" constant="9" id="EGC-xg-V9b"/>
+                            <constraint firstItem="ebH-dT-fgZ" firstAttribute="width" secondItem="wsn-oY-UoQ" secondAttribute="width" id="Hee-9B-Ppx"/>
+                            <constraint firstItem="wsn-oY-UoQ" firstAttribute="width" secondItem="GOx-03-U0e" secondAttribute="width" id="Iwc-Xr-2Ma"/>
+                            <constraint firstItem="yKe-bd-Gih" firstAttribute="top" secondItem="fc8-VB-nVc" secondAttribute="top" multiplier="0.9" constant="30" id="PTt-uo-Fso"/>
+                            <constraint firstItem="CjT-Ib-XYf" firstAttribute="leading" secondItem="wFu-3J-Osi" secondAttribute="trailing" constant="10" id="UEQ-Vb-f68"/>
+                            <constraint firstItem="wsn-oY-UoQ" firstAttribute="centerY" secondItem="GOx-03-U0e" secondAttribute="centerY" id="W8W-aH-4t3"/>
+                            <constraint firstItem="CjT-Ib-XYf" firstAttribute="centerY" secondItem="wFu-3J-Osi" secondAttribute="centerY" id="b25-3x-QsI"/>
+                            <constraint firstItem="ebH-dT-fgZ" firstAttribute="centerX" secondItem="wsn-oY-UoQ" secondAttribute="centerX" id="hBC-ru-FVm"/>
+                            <constraint firstItem="fc8-VB-nVc" firstAttribute="bottom" secondItem="ebH-dT-fgZ" secondAttribute="bottom" id="iL3-3h-oNd"/>
+                            <constraint firstItem="ebH-dT-fgZ" firstAttribute="top" secondItem="wsn-oY-UoQ" secondAttribute="bottom" id="l51-df-eqi"/>
+                            <constraint firstItem="yKe-bd-Gih" firstAttribute="leading" secondItem="CjT-Ib-XYf" secondAttribute="trailing" constant="40" id="lMs-zG-CT0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="fc8-VB-nVc"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="1mA-bW-WSe"/>
+                    <connections>
+                        <outlet property="blogDescription" destination="ebH-dT-fgZ" id="7Ox-ze-zd7"/>
+                        <outlet property="bloggerName" destination="CjT-Ib-XYf" id="XpA-up-hBD"/>
+                        <outlet property="bloggerimage" destination="wFu-3J-Osi" id="JOD-1T-f7b"/>
+                        <outlet property="detailBlogImage" destination="wsn-oY-UoQ" id="RTg-c9-xgV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bEe-M1-KmM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3418.4000000000001" y="60.719640179910051"/>
+        </scene>
         <!--Fellow Feed-->
         <scene sceneID="2fF-S7-P7G">
             <objects>
@@ -162,6 +238,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="1nO-eF-gbY" id="3b8-aV-hVj"/>
+                        <segue destination="LQs-hl-4KI" kind="presentation" identifier="detail segue" id="ULh-8z-dnD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QgX-QF-MoP" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -562,6 +639,24 @@
             </objects>
             <point key="canvasLocation" x="2469.5999999999999" y="-609.44527736131943"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="JKj-v0-Fei">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="LQs-hl-4KI" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EUb-8s-T5n">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="y6v-SD-4ZL" kind="relationship" relationship="rootViewController" id="Qtr-av-bXm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vf0-Ld-Qca" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2479.1999999999998" y="60.719640179910051"/>
+        </scene>
     </scenes>
     <resources>
         <image name="News" width="25" height="25"/>
@@ -572,6 +667,7 @@
         <image name="User" width="25" height="25"/>
         <image name="UserFilled" width="25" height="25"/>
         <image name="cameraViewfinder" width="996" height="687"/>
+        <image name="settings" width="25" height="25"/>
         <image name="tealCover" width="1280" height="720"/>
     </resources>
     <color key="tintColor" red="0.1569241187" green="0.5672338053" blue="0.58288388319999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
