--- a/FellowBloggerV2/Storyboards/Base.lproj/Main.storyboard
+++ b/FellowBloggerV2/Storyboards/Base.lproj/Main.storyboard
@@ -388,6 +388,9 @@
                                     <constraint firstAttribute="width" secondItem="P9R-OW-vQe" secondAttribute="height" multiplier="1:1" id="rT8-a6-Sn9"/>
                                 </constraints>
                                 <state key="normal" image="ProfilePH"/>
+                                <connections>
+                                    <action selector="profilePhotoPressed:" destination="nYe-kO-b7E" eventType="touchUpInside" id="nq4-Xn-mog"/>
+                                </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7sA-ak-IL4">
                                 <rect key="frame" x="0.0" y="303" width="375" height="364"/>
@@ -492,9 +495,11 @@
                         <outlet property="editCoverImage" destination="jGM-Dx-EPq" id="K4T-ES-r7s"/>
                         <outlet property="editProfileButton" destination="P9R-OW-vQe" id="n76-rs-Bqr"/>
                         <outlet property="tableView" destination="7sA-ak-IL4" id="lSp-qE-sZJ"/>
+                        <segue destination="Uq3-et-5HH" kind="unwind" identifier="from edit to profile VC" unwindAction="unwindFromEditViewControllerWithSegue:" id="8GQ-j0-xfD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Ek-mX-9mM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Uq3-et-5HH" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2592.8000000000002" y="751.57421289355329"/>
         </scene>
@@ -522,9 +527,20 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="OCa-t2-Qxz"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Edit Bio" id="3jp-DR-tC7"/>
+                    <navigationItem key="navigationItem" title="Edit Bio" id="3jp-DR-tC7">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="Zdv-De-AxC">
+                            <connections>
+                                <action selector="savePressed:" destination="Di7-hD-Ane" id="TFP-gx-WST"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="editBioTextView" destination="Wfm-EZ-PhO" id="ONj-xI-DAt"/>
+                        <segue destination="t8c-xh-J5e" kind="unwind" identifier="unwind from edit bio vc" unwindAction="unwindFromEditBioVontrollerWithSegue:" id="5o7-bm-WEe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4u8-YQ-N6V" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="t8c-xh-J5e" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="4416.8000000000002" y="757.87106446776613"/>
         </scene>
