--- a/FellowBloggerV2/Storyboards/Base.lproj/Main.storyboard
+++ b/FellowBloggerV2/Storyboards/Base.lproj/Main.storyboard
@@ -156,7 +156,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bEe-M1-KmM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3418.4000000000001" y="60.719640179910051"/>
+            <point key="canvasLocation" x="4357.6000000000004" y="60.719640179910051"/>
         </scene>
         <!--Fellow Feed-->
         <scene sceneID="2fF-S7-P7G">
@@ -215,6 +215,7 @@
                                             <outlet property="feedDescription" destination="agH-KF-agj" id="Nn2-dJ-Qux"/>
                                             <outlet property="feedPhoto" destination="a9A-Wt-tkH" id="pcX-6o-Tkx"/>
                                             <outlet property="profilePhoto" destination="dj8-Wp-MkH" id="mb7-g3-3Qi"/>
+                                            <segue destination="Lo3-B9-AvB" kind="presentation" identifier="detail segue" id="gLr-Fo-Yg2"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -238,7 +239,6 @@
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="1nO-eF-gbY" id="3b8-aV-hVj"/>
-                        <segue destination="LQs-hl-4KI" kind="presentation" identifier="detail segue" id="ULh-8z-dnD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QgX-QF-MoP" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -656,22 +656,22 @@
             <point key="canvasLocation" x="2469.5999999999999" y="-609.44527736131943"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="JKj-v0-Fei">
+        <scene sceneID="FF3-f1-mZ6">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="LQs-hl-4KI" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="DetailNavController" automaticallyAdjustsScrollViewInsets="NO" id="Lo3-B9-AvB" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EUb-8s-T5n">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cvq-JQ-mqj">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="y6v-SD-4ZL" kind="relationship" relationship="rootViewController" id="Qtr-av-bXm"/>
+                        <segue destination="y6v-SD-4ZL" kind="relationship" relationship="rootViewController" id="R8X-kL-Eha"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vf0-Ld-Qca" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YIf-G3-WsZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2479.1999999999998" y="60.719640179910051"/>
+            <point key="canvasLocation" x="3418.4000000000001" y="60.719640179910051"/>
         </scene>
     </scenes>
     <resources>
