--- a/FellowBloggerV2/Storyboards/Base.lproj/Main.storyboard
+++ b/FellowBloggerV2/Storyboards/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zgy-n4-h6c" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="828" y="46.326836581709152"/>
+            <point key="canvasLocation" x="828" y="83"/>
         </scene>
         <!--Search Fellow Result Controller-->
         <scene sceneID="1DC-9T-n6M">
@@ -35,7 +35,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2WS-RJ-EPO">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="fellowSearchCell" textLabel="Ifd-Xx-Fvq" detailTextLabel="ogx-bJ-4Lv" style="IBUITableViewCellStyleSubtitle" id="uHw-ae-7TK">
@@ -74,13 +74,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="h46-Ll-8jM"/>
                     </view>
+                    <navigationItem key="navigationItem" id="yry-1c-36N"/>
                     <connections>
                         <outlet property="tableView" destination="2WS-RJ-EPO" id="RmU-BA-HYT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eAS-og-BRK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1745" y="83"/>
+            <point key="canvasLocation" x="5066.3999999999996" y="83.208395802098963"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="C9g-nf-AWL">
@@ -564,7 +565,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sbj-pz-bui" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-111.2" y="751.57421289355329"/>
+            <point key="canvasLocation" x="-111" y="879"/>
         </scene>
         <!--Search Fellow-->
         <scene sceneID="KUm-Pd-IXP">
@@ -657,6 +658,24 @@
                 </navigationController>
             </objects>
             <point key="canvasLocation" x="2593" y="-720"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="615-CS-7ww">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="yZ5-gL-nsL" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="35h-W6-DQd">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="HTc-IG-fEA" kind="relationship" relationship="rootViewController" id="n9g-Fy-5Eh"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vfb-Xu-gHJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4125.6000000000004" y="82.3088455772114"/>
         </scene>
     </scenes>
     <resources>
