--- a/FellowBloggerV2/Storyboards/Base.lproj/Main.storyboard
+++ b/FellowBloggerV2/Storyboards/Base.lproj/Main.storyboard
@@ -271,6 +271,7 @@
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.1569241187" green="0.5672338053" blue="0.58288388319999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="2Hd-QV-gKW" firstAttribute="width" secondItem="IWD-4W-6AZ" secondAttribute="width" multiplier="0.8" id="7h3-2o-7x1"/>
                             <constraint firstItem="2Hd-QV-gKW" firstAttribute="centerY" secondItem="YzD-59-wb9" secondAttribute="centerY" multiplier="0.7" id="DNX-Za-reo"/>
@@ -281,6 +282,9 @@
                             <constraint firstItem="2Hd-QV-gKW" firstAttribute="centerX" secondItem="YzD-59-wb9" secondAttribute="centerX" id="eZu-h1-1HA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="YzD-59-wb9"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="72J-WB-rp3" appends="YES" id="57r-Ns-R9q"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" id="ubw-Qf-CQI">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="5XA-Sa-fOH">
@@ -302,6 +306,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jKO-VG-XhC" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="TMw-d1-8LR" userLabel="Exit" sceneMemberID="exit"/>
+                <tapGestureRecognizer id="72J-WB-rp3">
+                    <connections>
+                        <action selector="tapHandles:" destination="EMB-5k-Dlc" id="FTW-iZ-sdl"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="3408.8000000000002" y="-609.44527736131943"/>
         </scene>
